cabal-version:      3.0
name:               raytracing
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/jeffhappily/raytracing#readme>

homepage:           https://github.com/jeffhappily/raytracing#readme
bug-reports:        https://github.com/jeffhappily/raytracing/issues
author:             Cheah Jer Fei
maintainer:         goodboy96@live.com.my
copyright:          2021 Cheah Jer Fei
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

tested-with:        GHC ==9.4.7

source-repository head
  type:     git
  location: https://github.com/jeffhappily/raytracing

common common-lang
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    OverloadedStrings
    ScopedTypeVariables

  --   BangPatterns
  --   BinaryLiterals
  --   ConstraintKinds
  --   DataKinds
  --   DeriveFunctor
  --   DeriveGeneric
  --   DeriveTraversable
  --   DerivingVia
  --   DuplicateRecordFields
  --   EmptyCase
  --   FlexibleContexts
  --   FlexibleInstances
  --   GADTs
  --   HexFloatLiterals
  --   LambdaCase
  --   MultiParamTypeClasses
  --   NumericUnderscores
  --   ScopedTypeVariables
  --   StandaloneDeriving
  --   TupleSections
  --   TypeApplications
  --   TypeOperators
  --   TypeSynonymInstances
  --   UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  build-depends:
    , async
    , base              >=4.7 && <5
    , bytestring
    , conduit
    , massiv
    , mono-traversable
    , streamly
    , text
    , vector

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Lib
    Ray
    Vec3

  hs-source-dirs:  src
  build-depends:   semirings

executable raytracing-exe
  import:         common-lang
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  raytracing

test-suite raytracing-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark raytracing-benchmark
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A32m
  build-depends:
    , raytracing
    , tasty-bench

  -- , streamly
  if impl(ghc >=8.6)
    ghc-options: -fproc-alignment=64
